Update notebooks with Kaggle integration

--- a/notebooks/pattern_generation.ipynb
+++ b/notebooks/pattern_generation.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ampl/amplpy/blob/master/notebooks/pattern_generation.ipynb)\n",
     "\n",
+    "[![Kaggle](https://kaggle.com/static/images/open-in-kaggle.svg)](https://kaggle.com/kernels/welcome?src=https://github.com/ampl/amplpy/blob/master/notebooks/pattern_generation.ipynb)\n",
+    "\n",
     "Documentation: http://amplpy.readthedocs.io\n",
     "\n",
     "GitHub Repository: https://github.com/ampl/amplpy\n",
@@ -30,14 +32,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q amplpy matplotlib numpy"
+    "!pip install -q amplpy ampltools matplotlib numpy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Google Colab integration"
+    "### Google Colab & Kaggle interagration"
    ]
   },
   {
@@ -46,17 +48,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "test ! -z $COLAB_GPU || exit 0  # Run only if running on Google Colab\n",
-    "test ! -f ampl.installed || exit 0  # Run only once\n",
-    "rm -rf ampl.linux-intel64\n",
-    "# You can install a demo bundle with all solvers:\n",
-    "#   curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz\n",
-    "# Or pick individual modules (recommended in order to reduce disk usage):\n",
-    "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
-    "curl -O https://portal.ampl.com/dl/modules/gurobi-module.linux64.tgz && tar xzf gurobi-module.linux64.tgz\n",
-    "cp ampl.linux-intel64/ampl.lic ampl.linux-intel64/ampl.lic.demo\n",
-    "touch ampl.installed"
+    "import os, shutil\n",
+    "def install(modules=None, license_uuid=None, run_once=True):\n",
+    "    \"\"\"Installs AMPL bundle or individual modules.\"\"\"\n",
+    "    from ampltools import ampl_installer\n",
+    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
+    "    demo_lic_backup = os.path.join(ampl_dir, 'ampl.lic_demo')\n",
+    "    if run_once and os.path.isfile(demo_lic_backup):\n",
+    "        print('Already installed. Skipping.')\n",
+    "    elif modules is not None:\n",
+    "        for module in modules:\n",
+    "            ampl_installer(f'https://portal.ampl.com/dl/modules/{module}-module.linux64.tgz',\n",
+    "                           ampl_dir, verbose=True)\n",
+    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
+    "    else:\n",
+    "        ampl_installer('https://portal.ampl.com/dl/amplce/ampl.linux64.tgz',\n",
+    "                       ampl_dir, verbose=True)\n",
+    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
+    "    if license_uuid is not None:\n",
+    "        print(f'Activating license {license_uuid}')\n",
+    "        ampl_installer(f'https://portal.ampl.com/download/license/{license_uuid}/ampl.lic',\n",
+    "                       ampl_dir, verbose=True)\n",
+    "    else:\n",
+    "        print('Activating demo license.')\n",
+    "        shutil.copy(demo_lic_backup, os.path.join(ampl_dir, 'ampl.lic'))\n",
+    "    return ampl_dir"
    ]
   },
   {
@@ -65,16 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab\n",
-    "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
-    "# and rerun this cell before sharing the notebook with anyone\n",
-    "LICENSE_UUID=\n",
-    "test ! -z $COLAB_GPU || exit 0  # Run only if running on Google Colab\n",
-    "cd ampl.linux-intel64 && pwd\n",
-    "test -z $LICENSE_UUID && cp ampl.lic.demo ampl.lic  # Restore demo license in case LICENSE_UUID is empty\n",
-    "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic\n",
-    "./ampl -vvq"
+    "RUNNING_IN_GOOGLE_COLAB = 'COLAB_GPU' in os.environ\n",
+    "RUNNING_IN_KAGGLE = os.path.abspath(os.curdir).startswith('/kaggle/')\n",
+    "RUNNING_IN_THE_CLOUD = RUNNING_IN_GOOGLE_COLAB or RUNNING_IN_KAGGLE"
    ]
   },
   {
@@ -83,9 +92,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "if 'COLAB_GPU' in os.environ:\n",
-    "    os.environ['PATH'] += os.pathsep + '/content/ampl.linux-intel64'"
+    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab and similar platforms.\n",
+    "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
+    "# and rerun this cell before sharing the notebook with anyone.\n",
+    "LICENSE_UUID = None\n",
+    "# You can install individual modules from https://portal.ampl.com/dl/modules/\n",
+    "MODULES = ['ampl', 'gurobi']\n",
+    "# Set to True in order to install AMPL only once \n",
+    "RUN_ONCE = True\n",
+    "if RUNNING_IN_THE_CLOUD:\n",
+    "    ampl_dir = install(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE)\n",
+    "    os.environ['PATH'] += os.pathsep + ampl_dir"
    ]
   },
   {
@@ -99,11 +116,23 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "option version 'AMPL Version 20220119 (Darwin-19.6.0, 64-bit)\\\n",
+      "Demo license with maintenance expiring 20240131.\\\n",
+      "Using license file \"/Users/fdabrandao/bin/ampl.macos64/ampl.lic\".\\\n",
+      "';\n"
+     ]
+    }
+   ],
    "source": [
     "from amplpy import AMPL, register_magics\n",
     "from math import floor\n",
     "ampl = AMPL()\n",
+    "ampl.eval('option version;')\n",
     "# Store %%ampl cells in the list _ampl_cells\n",
     "# Evaluate %%ampl_eval cells with ampl.eval()\n",
     "register_magics(store_name='_ampl_cells', ampl_object=ampl)"
@@ -315,43 +344,53 @@
      "output_type": "stream",
      "text": [
       "Master problem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 20.44444444\n",
       "\n",
       "Subproblem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.152777778\n",
       "1 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "\n",
       "Master problem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 18.77777778\n",
       "1 simplex iterations\n",
       "\n",
       "Subproblem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.111111111\n",
       "\n",
       "Master problem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 18.375\n",
       "3 simplex iterations\n",
       "\n",
       "Subproblem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.125\n",
       "1 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "\n",
       "Master problem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 17.95833333\n",
       "5 simplex iterations\n",
       "\n",
       "Subproblem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1.041666667\n",
       "2 simplex iterations\n",
       "1 branch-and-cut nodes\n",
       "\n",
       "Master problem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 17.94117647\n",
       "5 simplex iterations\n",
       "\n",
       "Subproblem:\n",
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 1\n",
       "1 simplex iterations\n",
       "1 branch-and-cut nodes\n",
@@ -397,6 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "gurobi (Darwin x86_64), licchk(20131021), ASL(20211109)\n",
       "Gurobi 9.5.0: optimal solution; objective 19\n",
       "5 simplex iterations\n",
       "1 branch-and-cut nodes\n",
