Update notebooks using ampltools 0.1.0

--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -48,39 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, shutil\n",
-    "def install(modules=None, license_uuid=None, run_once=True):\n",
-    "    \"\"\"Installs AMPL bundle or individual modules.\"\"\"\n",
-    "    from ampltools import ampl_installer\n",
-    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    demo_lic_backup = os.path.join(ampl_dir, 'ampl.lic_demo')\n",
-    "    if run_once and os.path.isfile(demo_lic_backup):\n",
-    "        print('Already installed. Skipping.')\n",
-    "    elif modules is not None:\n",
-    "        for module in modules:\n",
-    "            ampl_installer(f'https://portal.ampl.com/dl/modules/{module}-module.linux64.tgz',\n",
-    "                           ampl_dir, verbose=True)\n",
-    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
-    "    else:\n",
-    "        ampl_installer('https://portal.ampl.com/dl/amplce/ampl.linux64.tgz',\n",
-    "                       ampl_dir, verbose=True)\n",
-    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
-    "    if license_uuid is not None:\n",
-    "        print(f'Activating license {license_uuid}')\n",
-    "        ampl_installer(f'https://portal.ampl.com/download/license/{license_uuid}/ampl.lic',\n",
-    "                       ampl_dir, verbose=True)\n",
-    "    else:\n",
-    "        print('Activating demo license.')\n",
-    "        shutil.copy(demo_lic_backup, os.path.join(ampl_dir, 'ampl.lic'))\n",
-    "    return ampl_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
     "RUNNING_IN_GOOGLE_COLAB = 'COLAB_GPU' in os.environ\n",
     "RUNNING_IN_KAGGLE = os.path.abspath(os.curdir).startswith('/kaggle/')\n",
     "RUNNING_IN_THE_CLOUD = RUNNING_IN_GOOGLE_COLAB or RUNNING_IN_KAGGLE"
@@ -88,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +69,9 @@
     "# Set to True in order to install AMPL only once \n",
     "RUN_ONCE = True\n",
     "if RUNNING_IN_THE_CLOUD:\n",
-    "    ampl_dir = install(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE)\n",
+    "    from ampltools import ampl_installer\n",
+    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
+    "    ampl_installer(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
     "    os.environ['PATH'] += os.pathsep + ampl_dir"
    ]
   },
@@ -114,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting cut2.mod\n"
+      "Writing cut2.mod\n"
      ]
     }
    ],
@@ -226,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting cut.dat\n"
+      "Writing cut.dat\n"
      ]
     }
    ],
@@ -253,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting cut2.run\n"
+      "Writing cut2.run\n"
      ]
     }
    ],
@@ -326,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -336,19 +306,19 @@
       "CBC 2.10.5CBC 2.10.5 optimal, objective 52.1\n",
       "0 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 3 iterations, 0.004679 seconds\n",
+      "0 nodes, 3 iterations, 0.004576 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 50.5\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 0 iterations, 0.002569 seconds\n",
+      "0 nodes, 0 iterations, 0.002572 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.1\n",
-      "0 nodes, 0 iterations, 0.003467 seconds\n",
+      "0 nodes, 0 iterations, 0.00356 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 46.25\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 0\n",
-      "0 nodes, 6 iterations, 0.00401 seconds\n",
+      "0 nodes, 6 iterations, 0.004062 seconds\n",
       "nbr [*,*] (tr)\n",
       ":  20  45  50  55  75    :=\n",
       "1   5   0   0   0   0\n",
@@ -373,7 +343,7 @@
       ";\n",
       "\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
-      "0 nodes, 0 iterations, 0.003415 seconds\n",
+      "0 nodes, 0 iterations, 0.003493 seconds\n",
       "Cut [*] :=\n",
       "1   1\n",
       "2   0\n",
