--- a/notebooks/pattern_enumeration.ipynb
+++ b/notebooks/pattern_enumeration.ipynb
@@ -48,39 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, shutil\n",
-    "def install(modules=None, license_uuid=None, run_once=True):\n",
-    "    \"\"\"Installs AMPL bundle or individual modules.\"\"\"\n",
-    "    from ampltools import ampl_installer\n",
-    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    demo_lic_backup = os.path.join(ampl_dir, 'ampl.lic_demo')\n",
-    "    if run_once and os.path.isfile(demo_lic_backup):\n",
-    "        print('Already installed. Skipping.')\n",
-    "    elif modules is not None:\n",
-    "        for module in modules:\n",
-    "            ampl_installer(f'https://portal.ampl.com/dl/modules/{module}-module.linux64.tgz',\n",
-    "                           ampl_dir, verbose=True)\n",
-    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
-    "    else:\n",
-    "        ampl_installer('https://portal.ampl.com/dl/amplce/ampl.linux64.tgz',\n",
-    "                       ampl_dir, verbose=True)\n",
-    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
-    "    if license_uuid is not None:\n",
-    "        print(f'Activating license {license_uuid}')\n",
-    "        ampl_installer(f'https://portal.ampl.com/download/license/{license_uuid}/ampl.lic',\n",
-    "                       ampl_dir, verbose=True)\n",
-    "    else:\n",
-    "        print('Activating demo license.')\n",
-    "        shutil.copy(demo_lic_backup, os.path.join(ampl_dir, 'ampl.lic'))\n",
-    "    return ampl_dir### Google Colab & Kaggle interagration"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
     "RUNNING_IN_GOOGLE_COLAB = 'COLAB_GPU' in os.environ\n",
     "RUNNING_IN_KAGGLE = os.path.abspath(os.curdir).startswith('/kaggle/')\n",
     "RUNNING_IN_THE_CLOUD = RUNNING_IN_GOOGLE_COLAB or RUNNING_IN_KAGGLE"
@@ -88,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +69,9 @@
     "# Set to True in order to install AMPL only once \n",
     "RUN_ONCE = True\n",
     "if RUNNING_IN_THE_CLOUD:\n",
-    "    ampl_dir = install(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE)\n",
+    "    from ampltools import ampl_installer\n",
+    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
+    "    ampl_installer(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
     "    os.environ['PATH'] += os.pathsep + ampl_dir"
    ]
   },
@@ -114,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
