--- a/notebooks/magics.ipynb
+++ b/notebooks/magics.ipynb
@@ -48,39 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, shutil\n",
-    "def install(modules=None, license_uuid=None, run_once=True):\n",
-    "    \"\"\"Installs AMPL bundle or individual modules.\"\"\"\n",
-    "    from ampltools import ampl_installer\n",
-    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    demo_lic_backup = os.path.join(ampl_dir, 'ampl.lic_demo')\n",
-    "    if run_once and os.path.isfile(demo_lic_backup):\n",
-    "        print('Already installed. Skipping.')\n",
-    "    elif modules is not None:\n",
-    "        for module in modules:\n",
-    "            ampl_installer(f'https://portal.ampl.com/dl/modules/{module}-module.linux64.tgz',\n",
-    "                           ampl_dir, verbose=True)\n",
-    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
-    "    else:\n",
-    "        ampl_installer('https://portal.ampl.com/dl/amplce/ampl.linux64.tgz',\n",
-    "                       ampl_dir, verbose=True)\n",
-    "        shutil.copy(os.path.join(ampl_dir, 'ampl.lic'), demo_lic_backup)\n",
-    "    if license_uuid is not None:\n",
-    "        print(f'Activating license {license_uuid}')\n",
-    "        ampl_installer(f'https://portal.ampl.com/download/license/{license_uuid}/ampl.lic',\n",
-    "                       ampl_dir, verbose=True)\n",
-    "    else:\n",
-    "        print('Activating demo license.')\n",
-    "        shutil.copy(demo_lic_backup, os.path.join(ampl_dir, 'ampl.lic'))\n",
-    "    return ampl_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
     "RUNNING_IN_GOOGLE_COLAB = 'COLAB_GPU' in os.environ\n",
     "RUNNING_IN_KAGGLE = os.path.abspath(os.curdir).startswith('/kaggle/')\n",
     "RUNNING_IN_THE_CLOUD = RUNNING_IN_GOOGLE_COLAB or RUNNING_IN_KAGGLE"
@@ -88,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +69,9 @@
     "# Set to True in order to install AMPL only once \n",
     "RUN_ONCE = True\n",
     "if RUNNING_IN_THE_CLOUD:\n",
-    "    ampl_dir = install(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE)\n",
+    "    from ampltools import ampl_installer\n",
+    "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
+    "    ampl_installer(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
     "    os.environ['PATH'] += os.pathsep + ampl_dir"
    ]
   },
@@ -114,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -290,10 +260,10 @@
       "  RHS range        [1e+01, 1e+01]\n",
       "Found heuristic solution: objective 50.0000000\n",
       "Presolve removed 1 rows and 4 columns\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.01s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.00 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 90 50 \n",
