Add missing argument to ampl_installer

--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -90,7 +90,7 @@
     "if RUNNING_IN_THE_CLOUD:\n",
     "    from ampltools import ampl_installer\n",
     "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
-    "    ampl_installer(modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
+    "    ampl_installer(ampl_dir, modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
     "    os.environ['PATH'] += os.pathsep + ampl_dir"
    ]
   },
