Update notebooks using ampltools 0.2.0 to simplify cloud integration

--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -48,18 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "RUNNING_IN_GOOGLE_COLAB = 'COLAB_GPU' in os.environ\n",
-    "RUNNING_IN_KAGGLE = os.path.abspath(os.curdir).startswith('/kaggle/')\n",
-    "RUNNING_IN_THE_CLOUD = RUNNING_IN_GOOGLE_COLAB or RUNNING_IN_KAGGLE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab and similar platforms.\n",
     "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
     "# and rerun this cell before sharing the notebook with anyone.\n",
@@ -68,8 +56,9 @@
     "MODULES = ['ampl', 'coin']\n",
     "# Set to True in order to install AMPL only once \n",
     "RUN_ONCE = True\n",
-    "if RUNNING_IN_THE_CLOUD:\n",
-    "    from ampltools import ampl_installer\n",
+    "import os\n",
+    "from ampltools import ampl_installer, cloud_platform_name\n",
+    "if cloud_platform_name() is not None:\n",
     "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
     "    ampl_installer(ampl_dir, modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
     "    os.environ['PATH'] += os.pathsep + ampl_dir"
@@ -84,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cut2.mod\n"
+      "Overwriting cut2.mod\n"
      ]
     }
    ],
@@ -196,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cut.dat\n"
+      "Overwriting cut.dat\n"
      ]
     }
    ],
@@ -223,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cut2.run\n"
+      "Overwriting cut2.run\n"
      ]
     }
    ],
@@ -296,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,19 +295,19 @@
       "CBC 2.10.5CBC 2.10.5 optimal, objective 52.1\n",
       "0 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 3 iterations, 0.004576 seconds\n",
+      "0 nodes, 3 iterations, 0.004832 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 50.5\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 0 iterations, 0.002572 seconds\n",
+      "0 nodes, 0 iterations, 0.002899 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.1\n",
-      "0 nodes, 0 iterations, 0.00356 seconds\n",
+      "0 nodes, 0 iterations, 0.003766 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 46.25\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 0\n",
-      "0 nodes, 6 iterations, 0.004062 seconds\n",
+      "0 nodes, 6 iterations, 0.005317 seconds\n",
       "nbr [*,*] (tr)\n",
       ":  20  45  50  55  75    :=\n",
       "1   5   0   0   0   0\n",
@@ -343,7 +332,7 @@
       ";\n",
       "\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
-      "0 nodes, 0 iterations, 0.003493 seconds\n",
+      "0 nodes, 0 iterations, 0.003534 seconds\n",
       "Cut [*] :=\n",
       "1   1\n",
       "2   0\n",
