--- a/notebooks/magics.ipynb
+++ b/notebooks/magics.ipynb
@@ -48,18 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "RUNNING_IN_GOOGLE_COLAB = 'COLAB_GPU' in os.environ\n",
-    "RUNNING_IN_KAGGLE = os.path.abspath(os.curdir).startswith('/kaggle/')\n",
-    "RUNNING_IN_THE_CLOUD = RUNNING_IN_GOOGLE_COLAB or RUNNING_IN_KAGGLE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab and similar platforms.\n",
     "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
     "# and rerun this cell before sharing the notebook with anyone.\n",
@@ -68,8 +56,9 @@
     "MODULES = ['ampl', 'gurobi']\n",
     "# Set to True in order to install AMPL only once \n",
     "RUN_ONCE = True\n",
-    "if RUNNING_IN_THE_CLOUD:\n",
-    "    from ampltools import ampl_installer\n",
+    "import os\n",
+    "from ampltools import ampl_installer, cloud_platform_name\n",
+    "if cloud_platform_name() is not None:\n",
     "    ampl_dir = os.path.abspath(os.path.join(os.curdir, 'ampl.linux-intel64'))\n",
     "    ampl_installer(ampl_dir, modules=MODULES, license_uuid=LICENSE_UUID, run_once=RUN_ONCE, verbose=True)\n",
     "    os.environ['PATH'] += os.pathsep + ampl_dir"
@@ -84,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +252,7 @@
       "Presolve time: 0.01s\n",
       "Presolve: All rows and columns removed\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Explored 0 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
       "Thread count was 1 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 90 50 \n",
