Renamed hashcode notebook and minor changes

--- a/notebooks/hashcode/practice_problem.ipynb
+++ b/notebooks/hashcode/practice_problem.ipynb
@@ -450,12 +450,19 @@
     "## New constraints\n",
     "\n",
     "The constraints are quite simple now. Two nodes that are not connected can't be in the same clique. For each pair of nodes not connected $i$ and $j$:\n",
-    "\n",
     "$$x_i + x_j \\leq 1$$\n",
     "\n",
     "## Formulation with AMPL\n",
     "\n",
-    "We are writing a new model file, following the "
+    "We are writing a new model file (very similar to the previous one). In order to reuse the data files and not get any errors, we will keep the *INGR* set although it is not going to be used anymore.\n",
+    "\n",
+    "The most interesting feature in the model could be the condition to check that two customers are incompatible to generate a constraint. The condition is:\n",
+    "\n",
+    "$$Liked_i \\cap Disliked_j \\neq \\emptyset \\ \\text{ or } \\ Liked_j \\cap Disliked_i \\neq \\emptyset$$\n",
+    "\n",
+    "A set is not empty if its cardinality is greater or equal to one, so in AMPL we could write:\n",
+    "\n",
+    "`card(Likes[i] inter Dislikes[j]) >= 1 or card(Likes[j] inter Dislikes[i]) >= 1`"
    ]
   },
   {
@@ -477,7 +484,9 @@
     "# PARAMETERS AND SETS\n",
     "param total_customers;\n",
     "\n",
+    "# Set of ingredients\n",
     "set INGR;\n",
+    "# Customers lists of preferences\n",
     "set Likes{1..total_customers};\n",
     "set Dislikes{1..total_customers};\n",
     "\n",
