Hashcode notebook: Changes colab button

--- a/notebooks/hashcode/practice_problem.ipynb
+++ b/notebooks/hashcode/practice_problem.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Google Hashcode 2022\n",
     "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ampl/amplpy/blob/master/notebooks/hashcode/practice_round.ipynb)\n",
+    "\n",
     "[Google Hashcode](https://codingcompetitions.withgoogle.com/hashcode) is a team programming competition to solve a complex **engineering problem**.\n",
     "\n",
     "In this notebook we are showing how Mathematical Optimization methods as ***Mixed Integer Programming*** (MIP) are useful to solve this kind of problems, as they are really easy to implement and give optimal solutions (not only _trade-off_ ones), as opposed to greedy approaches or heuristics. We are solving the *pizza* **warm-up exercise**.\n",
@@ -76,19 +78,7 @@
     "\n",
     "## AMPLPY Setup in the cloud\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ampl/amplpy/blob/master/notebooks/hashcode/practice_round.ipynb)\n",
-    "\n",
-    "Here is the documentation and examples to use the API:\n",
-    "\n",
-    "Documentation: http://amplpy.readthedocs.io\n",
-    "\n",
-    "GitHub Repository: https://github.com/ampl/amplpy\n",
-    "\n",
-    "PyPI Repository: https://pypi.python.org/pypi/amplpy\n",
-    "\n",
-    "Jupyter Notebooks: https://github.com/ampl/amplpy/tree/master/notebooks\n",
-    "\n",
-    "The following cell is enough to install it. We are using *ampl* (modeling language) and *gurobi* (solver) modules."
+    "Here is some documentation and examples of the API: [Documentation](http://amplpy.readthedocs.io), [GitHub Repository](https://github.com/ampl/amplpy), [PyPI Repository](https://pypi.python.org/pypi/amplpy), other [Jupyter Notebooks](https://github.com/ampl/amplpy/tree/master/notebooks). The following cell is enough to install it. We are using *ampl* (modeling language) and *gurobi* (solver) modules."
    ]
   },
   {
