Hashcode notebook: git clone repo to read data

--- a/notebooks/hashcode/practice_problem.ipynb
+++ b/notebooks/hashcode/practice_problem.ipynb
@@ -74,6 +74,32 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "We will need the input data files from the problem, they are available in the amplpy Github repository:"
+      ],
+      "metadata": {
+        "id": "exLThNHq0ztJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "if not os.path.isdir('input_data'):\n",
+        "    os.system('git clone https://github.com/ampl/amplpy.git')\n",
+        "    os.chdir('amplpy/notebooks/hashcode')\n",
+        "\n",
+        "if not os.path.isdir('ampl_input'):\n",
+        "  os.mkdir('ampl_input')"
+      ],
+      "metadata": {
+        "id": "YK0M3R9l1vTF"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "K_tSgg3Ki75t"
       },
@@ -87,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "5F5ueIrDi751"
       },
@@ -98,11 +124,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "bRmgn-hJi756"
+        "id": "bRmgn-hJi756",
+        "outputId": "178f385e-c929-4150-a6a5-463d1cee78b6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Already installed. Skipping.\n",
+            "Activating demo license.\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "RUNNING_IN_GOOGLE_COLAB = 'COLAB_GPU' in os.environ\n",
@@ -145,18 +184,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a5TgTF9Yi76B",
-        "outputId": "e30e5509-4771-4803-8c3e-e7cada55de20"
+        "outputId": "53b4e85f-5ac9-4098-95a3-5638431bede0"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Overwriting pizza.mod\n"
           ]
@@ -207,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "JQa0hdJHi76D"
       },
@@ -267,18 +306,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "J_h0xjzn-XlH",
-        "outputId": "693271e9-b312-4670-b7a2-6203b6e5fc06"
+        "outputId": "553a75a0-c455-44d7-ba33-29e69842ed57"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "param total_customers := 10 ;\n",
             "set Likes[1] := akuof byyii dlust ;\n",
@@ -323,16 +362,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "os.listdir('ampl_input')"
+      ],
+      "metadata": {
+        "id": "vJ8yWLCH1J9I",
+        "outputId": "705b8e78-5041-45f9-9dc9-53e43a7bc24d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['pizza_c.dat',\n",
+              " 'pizza_b.dat',\n",
+              " 'pizza_d.dat',\n",
+              " 'pizza_a.dat',\n",
+              " 'pizza_e.dat',\n",
+              " 'amplpy']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "-Oht3CaIRdzP",
-        "outputId": "4e212457-24d5-4720-d324-a9a819c19c79"
+        "outputId": "72d0d4f4-055d-4450-f717-2b2699525ef2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "gurobi (Linux x86_64), licchk(20131021), ASL(20211109)\n",
             "Gurobi 9.5.0: optimal solution; objective 5\n",
             "5 simplex iterations\n",
             "1 branch-and-cut nodes\n",
@@ -386,15 +460,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "gK369MvyRdzR",
-        "outputId": "e1f976a3-0486-448a-c5ea-f5088ed7bf9d"
+        "outputId": "eabdc8be-4a2c-4b44-e237-f294fafc63a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "7 byyii dlust luncl tfeej vxglq xdozp xveqd "
           ]
@@ -465,15 +542,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "RZ45qesQRdzV",
-        "outputId": "194da946-39a0-4a17-f9e5-42eab669bc4f"
+        "outputId": "695c1136-a59b-4805-9c40-3287473648f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Overwriting pizza_alternative.mod\n"
           ]
@@ -516,16 +596,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "yHW9epELRdzX",
-        "outputId": "64a887f1-7232-4a93-d283-f3eea082cb60"
+        "outputId": "20d6f42e-a9d3-4b87-ed50-d93101ca11f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
+            "gurobi (Linux x86_64), licchk(20131021), ASL(20211109)\n",
             "Gurobi 9.5.0: optimal solution; objective 5\n",
             "3 simplex iterations\n",
             "1 branch-and-cut nodes\n",
@@ -557,15 +641,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "qV9VQarGRdzY",
-        "outputId": "16aa94bd-4182-445a-afb0-f13ccc6b8013"
+        "outputId": "5cd9c9d7-4414-4a3a-e691-d3702a4387df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "7 dlust vxglq luncl xveqd tfeej xdozp byyii "
           ]
@@ -600,7 +687,7 @@
         "\n",
         "Also in the second approach, each constraint has only two non-zero coefficients along with variables, which is an advantage to have more sparse coefficient matrices.\n",
         "\n",
-        "The choice of one model or another will depend on the concrete instance of the problem, so the sparsity of the matrix and the real number of constraints can change. AMPL will take care of building the coefficient matrix efficiently, so there is no extra effort to compute the constraints or sums within them once the model is prepared and sent to the solver, and we can focus on thinking algorithmically. Also a lot of constraints and variables would be removed by presolve. To know more about the AMPL modeling language you can take a look to the [manual](https://ampl.com/resources/the-ampl-book/).\n",
+        "The choice of one model or another will depend on the concrete instance of the problem, so the sparsity of the matrix and the real number of constraints can change (actually, the constraints of the two models are compatible). AMPL will take care of building the coefficient matrix efficiently, so there is no extra effort to compute the constraints or sums within them once the model is prepared and sent to the solver, and we can focus on thinking algorithmically. Also a lot of constraints and variables would be removed by presolve. To know more about the AMPL modeling language you can take a look to the [manual](https://ampl.com/resources/the-ampl-book/).\n",
         "\n",
         "Some of the **advantages** of this approach are:\n",
         "* It is really easy to implement solutions.\n",
